--- a/themes/PaperMod/layouts/partials/head.html
+++ b/themes/PaperMod/layouts/partials/head.html
@@ -147,6 +147,7 @@
 </noscript>
 
 {{- partial "extend_head.html" . -}}
+{{ partial "plausible_head.html" . }}
 
 {{- /* Misc */}}
 {{- if hugo.IsProduction | or (eq site.Params.env "production") }}
